--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -20,22 +20,21 @@
   {% set colspan_all=30 %}
 
   {% if current_selection %}
-    {#    {% include 'summary/wiki_buttons.html' %}#}
+    {% include 'summary/buttons.html' %}
     {#    {% include 'common/table_legend.html' %}#}
-    <form class="form" method="post" action="#theform">
-      <table class="complex_datatable">
-        <caption>
-          <b>Current selection</b>:
-          {{ current_selection|join(', ') }}.
-          {#          {% set show_all_url=url_for(progress_endpoint,#}
-          {#          <a href="{{ show_all_url }}">Show all {{ group }}</a>#}
-        </caption>
+    <table class="complex_datatable">
+      <caption>
+        <b>Current selection</b>:
+        {{ current_selection|join(', ') }}.
+        {% set show_all_url=url_for('views.progress') %}
+        <a href="{{ show_all_url }}">Show all</a>
+      </caption>
 
-        {% include "common/species_table_header.html" with context %}
+      {% include "common/species_table_header.html" with context %}
 
-        <tbody>
-        {% for row in objects %}
-          <tr class="stripe_row">
+      <tbody>
+      {% for row in objects %}
+        <tr class="stripe_row">
           <td>{{ row.country_isocode }}</td>
 
           {% include 'summary/content/population_bs.html' with context %}
@@ -43,26 +42,25 @@
           {% include 'summary/content/population_ws.html' with context %}
           {% include 'summary/content/gridded_maps.html' with context %}
 
-          </tr>
-        {% endfor %}
-        </tbody>
+        </tr>
+      {% endfor %}
+      </tbody>
 
-        {# EU assessments #}
-        {% include 'common/species_table_eu_header.html' with context %}
-        <tbody>
-        {% for row in eu_objects %}
-          <tr class="stripe_row">
+      {# EU assessments #}
+      {% include 'common/species_table_eu_header.html' with context %}
+      <tbody>
+      {% for row in eu_objects %}
+        <tr class="stripe_row">
           <td>{{ EU_COUNTRY }}</td>
           {% include 'summary/eu/population_bs.html' with context %}
           {% include 'summary/eu/range.html' with context %}
           {% include 'summary/eu/population_ws.html' with context %}
           {% include 'summary/eu/status.html' with context %}
           {% include 'summary/eu/contrib.html' with context %}
-          </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-    </form>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
   {% else %}
     <p><b>Please select a species.</b></p>
   {% endif %}
