--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -29,7 +29,11 @@
 </tr>
 
 <tr>
+  {% if is_reports %}
+  <th rowspan="2">Species</th>
+  {% else %}
   <th rowspan="2" title="Member states">MS</th>
+  {% endif %}
   <th colspan="8">Breeding Population</th>
   <th colspan="8">Breeding Range</th>
   <th colspan="8">Winter Population</th>
