--- a/art12/templates/layout.html
+++ b/art12/templates/layout.html
@@ -5,9 +5,12 @@
     <script type="text/javascript" src="{{ ASSET_URL }}"></script>
   {% endassets %}
   {% assets "css" %}
-    <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"  />
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"/>
   {% endassets %}
 
   <link rel="stylesheet" type="text/css" media="screen"
-      href="http://www.eionet.europa.eu/styles/eionet2007/screen.css">
+        href="http://www.eionet.europa.eu/styles/eionet2007/screen.css">
+
+  <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed"
+        rel="stylesheet" type="text/css">
 {% endblock %}
