--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -20,7 +20,7 @@
   {% set colspan_all=30 %}
 
   {% if current_selection %}
-    {#    {% include 'common/table_legend.html' %}#}
+    {% include 'common/legend.html' %}
     <table class="complex_datatable">
       <caption>
         <b>Current selection</b>:
