--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -21,7 +21,7 @@
 
   {% if current_selection %}
     {% include 'summary/buttons.html' %}
-    {#    {% include 'common/table_legend.html' %}#}
+    {% include 'common/legend.html' %}
     <table class="complex_datatable">
       <caption>
         <b>Current selection</b>:
