[templates] show gridded maps information

--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,1 +1,4 @@
-<td colspan="4"></td>
+<td class="border_left">{{ row.distribution_grid_area|float }}</td>
+<td>{{ row.percentage_distribution_grid_area|float }}</td>
+<td>{{ row.range_grid_area|float }}</td>
+<td>{{ row.percentage_range_grid_area|float }}</td>
