--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,4 +1,6 @@
-<td class="center border_left">{{ row.population_minimum_size_ws|float }} - {{ row.population_maximum_size_ws|float }} {{ row.population_size_unit_ws }}</td>
+<td class="center number border_left">
+	{{ population_size_unit(row.ws) }}
+</td>
 <td class="center">{{ row.population_additional_info_record_ws }}</td>
 <td class="center">{{ row.percentage_population_mean_size_ws|float }}</td>
 <td class="center">{{ row.population_trend_period_ws }}</td>
