[templates] fix some classes on species summary

--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,4 +1,4 @@
 <td class="center border_left">{{ row.distribution_grid_area|float }}</td>
 <td class="center">{{ row.percentage_distribution_grid_area|float }}</td>
 <td class="center">{{ row.range_grid_area|float }}</td>
-<td class="center border_right">{{ row.percentage_range_grid_area|float }}</td>
+<td class="center">{{ row.percentage_range_grid_area|float }}</td>
