--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -5,7 +5,15 @@
 <td class="center">{{ row.population_additional_info_record_bs }}</td>
 <td class="center">{{ row.percentage_population_mean_size_bs|float }}</td>
 <td class="center">{{ row.population_trend_period_bs }}</td>
-<td class="center">{{ row.population_trend_bs}} ({{ row.population_trend_magnitude_min_bs|float }} – {{ row.population_trend_magnitude_max_bs|float }})</td>
+<td class="center trend-{{ TREND_CLASSES.get(row.population_trend_bs) }}">
+  <span class="center conclusion">
+		{{ row.population_trend_bs}} ({{ row.population_trend_magnitude_min_bs|float }} – {{ row.population_trend_magnitude_max_bs|float }})
+	</span>
+</td>
 <td class="center">{{ row.population_trend_long_period_bs }}</td>
-<td class="center">{{ row.population_trend_long_bs }} ({{ row.population_trend_long_magnitude_min_bs|float }} – {{ row.population_trend_long_magnitude_max_bs|float }})</td>
+<td class="center trend-{{ TREND_CLASSES.get(row.population_trend_long_bs) }}">
+	<span class="center conclusion">
+		{{ row.population_trend_long_bs }} ({{ row.population_trend_long_magnitude_min_bs|float }} – {{ row.population_trend_long_magnitude_max_bs|float }})
+  </span>
+</td>
 <td class="center">{{ row.population_trend_additional_info_record_bs }}</td>
