[templates] improve display

--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -1,4 +1,4 @@
-<td class="center border_left">{{ row.range_surface_area_bs|float }}</td>
+<td class="center border_left">{{ row.range_surface_area_bs|int }}</td>
 <td class="center">{{ row.range_additional_info_record_bs }}</td>
 <td class="center">{{ row.percentage_range_surface_area_bs|float or 'N/A' }}</td>
 <td class="center">{{ row.range_trend_period_bs or '' }}</td>
