--- a/art12/templates/progress/species.html
+++ b/art12/templates/progress/species.html
@@ -1,51 +1,53 @@
 {% extends 'layout.html' %}
 
 {% block breadcrumbs %}
-  {% from 'common/_macros.html' import breadcrumbs %}
-  {{ breadcrumbs(APP_BREADCRUMBS + [
+	{% from 'common/_macros.html' import breadcrumbs %}
+	{{ breadcrumbs(APP_BREADCRUMBS + [
       ('Species progress', None),
     ]) }}
 {% endblock %}
 
 
 {% block content %}
-  <h1>Species assessments at EU biogeographical level</h1>
+	<div class="copy-disabled" tabindex="1">
+		<h1>Species assessments at EU biogeographical level</h1>
 
-  <p>
-    Choose a period and a conclusion type.
-  </p>
+		<p>
+			Choose a period and a conclusion type.
+		</p>
 
-  {% include 'progress/filters.html' %}
+		{% include 'progress/filters.html' %}
 
-  {% if current_selection %}
-    {% include 'common/legend.html' %}
-    <table class="complex_datatable">
-      <caption>
-        <b>Current selection</b>:
-        {{ current_selection|join(', ') }}.
-      </caption>
+		{% if current_selection %}
+			{% include 'common/legend.html' %}
+			<table class="complex_datatable">
+				<caption>
+					<b>Current selection</b>:
+					{{ current_selection|join(', ') }}.
+				</caption>
 
-      <tbody class="thead">
-      <tr>
-        <th>Species</th>
-        <th>Conclusion</th>
-      </tr>
-      </tbody>
+				<tbody class="thead">
+				<tr>
+					<th>Species</th>
+					<th>Conclusion</th>
+				</tr>
+				</tbody>
 
-      <tbody>
-      {% for code,name,conclusion in conclusions %}
-        <tr class="stripe_row">
-          <td class="th">
-            {% set summary_url = url_for('views.summary', period=dataset.id, subject=code) %}
-            <a href="{{ summary_url }}">{{ name }}</a>
-          </td>
-          <td class="{{ conclusion }}">{{ conclusion }}</td>
-        </tr>
-      {% endfor %}
-      </tbody>
+				<tbody>
+				{% for code,name,conclusion in conclusions %}
+					<tr class="stripe_row">
+						<td class="th">
+							{% set summary_url = url_for('views.summary', period=dataset.id, subject=code) %}
+							<a href="{{ summary_url }}">{{ name }}</a>
+						</td>
+						<td class="{{ conclusion }}">{{ conclusion }}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
 
-    </table>
-  {% else %}
-    <p><b>Please select a period and a conclusion type.</b></p>
-  {% endif %}
+			</table>
+		{% else %}
+			<p><b>Please select a period and a conclusion type.</b></p>
+		{% endif %}
+	</div>
 {% endblock %}
