--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -1,50 +1,52 @@
 {% extends 'layout.html' %}
 
 {% block breadcrumbs %}
-  {% from 'common/_macros.html' import breadcrumbs %}
-  {{ breadcrumbs(APP_BREADCRUMBS + [
+	{% from 'common/_macros.html' import breadcrumbs %}
+	{{ breadcrumbs(APP_BREADCRUMBS + [
       ('Species report', None),
     ]) }}
 {% endblock %}
 
 
 {% block content %}
-  <h1>Species assessments at Member State level</h1>
+	<div class="copy-disabled" tabindex="1">
+		<h1>Species assessments at Member State level</h1>
 
-  <p>
-    Choose a period and a species.
-  </p>
+		<p>
+			Choose a period and a species.
+		</p>
 
-  {% include 'reports/filters.html' %}
+		{% include 'reports/filters.html' %}
 
-  {% set colspan_all=30 %}
+		{% set colspan_all=30 %}
 
-  {% if current_selection %}
-    {% include 'common/legend.html' %}
-    <table class="complex_datatable">
-      <caption>
-        <b>Current selection</b>:
-        {{ current_selection|join(', ') }}.
-      </caption>
+		{% if current_selection %}
+			{% include 'common/legend.html' %}
+			<table class="complex_datatable">
+				<caption>
+					<b>Current selection</b>:
+					{{ current_selection|join(', ') }}.
+				</caption>
 
-      {% set is_reports = true %}
-      {% include "common/species_table_header.html" with context %}
+				{% set is_reports = true %}
+				{% include "common/species_table_header.html" with context %}
 
-      <tbody>
-      {% for row in objects %}
-        <tr class="stripe_row">
-          <td>{{ row.speciesname }}</td>
+				<tbody>
+				{% for row in objects %}
+					<tr class="stripe_row">
+						<td>{{ row.speciesname }}</td>
 
-          {% include 'summary/content/population_bs.html' with context %}
-          {% include 'summary/content/range.html' with context %}
-          {% include 'summary/content/population_ws.html' with context %}
-          {% include 'summary/content/gridded_maps.html' with context %}
+						{% include 'summary/content/population_bs.html' with context %}
+						{% include 'summary/content/range.html' with context %}
+						{% include 'summary/content/population_ws.html' with context %}
+						{% include 'summary/content/gridded_maps.html' with context %}
 
-        </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-  {% else %}
-    <p><b>Please select a country.</b></p>
-  {% endif %}
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+		{% else %}
+			<p><b>Please select a country.</b></p>
+		{% endif %}
+	</div>
 {% endblock %}
