--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -9,7 +9,7 @@
     </dd>
 
     <dt class="trend-eq">
-      <abbr title="Stable" class="conclusion">=</abbr>
+      <abbr title="Stable" class="conclusion">0</abbr>
     </dt>
     <dd>
       Stable
