[templates] add classes to table cells to make them black

--- a/art12/static/css/art12.css
+++ b/art12/static/css/art12.css
@@ -43,5 +43,10 @@ body #workarea {
 }
 
 .copy-disabled {
-    outline: none;
+  outline: none;
+}
+
+.default-td {
+  color: #000;
+  text-align: center;
 }
