--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,18 +1,28 @@
-<td class="center number border_left">
+<td class="default-td border_left">
 	{{ population_size_unit(row.ws) }}
 </td>
-<td class="center">{{ row.population_additional_info_record_ws or '' }}</td>
-<td class="center">{{ row.percentage_population_mean_size_ws|float or ''}}</td>
-<td class="center">{{ row.population_trend_period_ws or '' }}</td>
-<td class="center trend-{{ TREND_CLASSES.get(row.population_trend_ws) }}">
-  <span class="center conclusion">
+<td class="default-td">
+	{{ row.population_additional_info_record_ws or '' }}
+</td>
+<td class="center">
+	{{ row.percentage_population_mean_size_ws|float or ''}}
+</td>
+<td class="default-td">
+	{{ row.population_trend_period_ws or '' }}
+</td>
+<td class="trend-{{ TREND_CLASSES.get(row.population_trend_ws) }}">
+  <span class="conclusion">
 		{{ population_trend(row.ws) }}
 	</span>
 </td>
-<td class="center">{{ row.population_trend_long_period_ws or ''}}</td>
-<td class="center trend-{{ TREND_CLASSES.get(row.population_trend_long_ws) }}">
-  <span class="center conclusion">
+<td class="default-td">
+	{{ row.population_trend_long_period_ws or ''}}
+</td>
+<td class="trend-{{ TREND_CLASSES.get(row.population_trend_long_ws) }}">
+  <span class="conclusion">
   	{{ population_trend_long(row.ws) }}
   </span>
 </td>
-<td class="center">{{ row.population_trend_additional_info_record_ws or '' }}</td>
+<td class="default-td">
+	{{ row.population_trend_additional_info_record_ws or '' }}
+</td>
