--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -1,9 +1,13 @@
-<td class="default-td border_left">
+<td class="default-td border_left"
+		title="{{ row.range_quality_bs }}">
 	<span class="conclusion">
     {{ row.range_surface_area_bs|int }}
 	</span>
 </td>
-<td class="default-td">
+<td class="default-td"
+		{% if row.range_additional_info_record_bs == 'Y' %}
+      title="{{ row.range_additional_info_bs|wordwrap }}"
+		{% endif %}>
 	{{ row.range_additional_info_record_bs }}
 </td>
 <td class="center">
@@ -12,7 +16,8 @@
 <td class="default-td">
 	{{ row.range_trend_period_bs or '' }}
 </td>
-<td class="trend-{{ TREND_CLASSES.get(row.range_trend_bs) }}">
+<td class="trend-{{ TREND_CLASSES.get(row.range_trend_bs) }}"
+		title="{{ row.range_trend_quality_bs }}">
   <span class="conclusion">
 		{{ range_trend(row.range_trend_bs, row.range_trend_magnitude_min_bs, row.range_trend_magnitude_max_bs) }}
 	</span>
@@ -20,11 +25,15 @@
 <td class="default-td">
 	{{ row.range_trend_long_period_bs or '' }}
 </td>
-<td class="trend-{{ TREND_CLASSES.get(row.range_trend_long_bs) }}">
+<td class="trend-{{ TREND_CLASSES.get(row.range_trend_long_bs) }}"
+		title="{{ row.range_trend_long_quality_bs }}">
   <span class="conclusion">
 		{{ range_trend_long(row.range_trend_long_bs, row.range_trend_long_magnitude_min_bs, row.range_trend_long_magnitude_max_bs) }}
 	</span>
 </td>
-<td class="default-td">
+<td class="default-td"
+		{% if row.range_trend_additional_info_record_bs == 'Y' %}
+		  title="{{ row.range_trend_additional_info_bs|wordwrap }}"
+	  {% endif %}>
 	{{ row.range_trend_additional_info_record_bs }}
 </td>
