[templates] small dispaly fixing

--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -34,7 +34,7 @@
 				<tbody>
 				{% for row in objects %}
 					<tr class="stripe_row">
-						<td>{{ row.speciesname }}</td>
+						<td class="default-td">{{ row.speciesname }}</td>
 
 						{% include 'summary/content/population_bs.html' with context %}
 						{% include 'summary/content/range.html' with context %}
