--- a/art12/templates/summary/buttons.html
+++ b/art12/templates/summary/buttons.html
@@ -1,19 +1,20 @@
 <div>
-  {% set datasheet_url=url_for('wiki.datasheet', period=dataset.id, subject=subject) %}
+	{% set datasheet_url=url_for('wiki.datasheet', period=dataset.id, subject=subject) %}
+	{% set audittrail_url=url_for('wiki.audittrail', period=dataset.id, subject=subject) %}
 
 	<button type="button" id="wikibutton" href="{{ datasheet_url }}">
 		View data sheet info
 	</button>
 
-    <button type="button" id="wikibutton" href="{{ audittrail_url }}">
-        Audit trail
-		</button>
+	<button type="button" id="wikibutton" href="{{ audittrail_url }}">
+		Audit trail
+	</button>
 
-  {% if map_url %}
-    <button type="button" id="show-map" data-url="{{ map_url }}">Map</button>
-  {% endif %}
+	{% if map_url %}
+		<button type="button" id="show-map" data-url="{{ map_url }}">Map</button>
+	{% endif %}
 
-  {% if eu_map_url %}
-    <button type="button" id="show-eu-map" data-url="{{ eu_map_url }}">EU Map of population Trend</button>
-  {% endif %}
+	{% if eu_map_url %}
+		<button type="button" id="show-eu-map" data-url="{{ eu_map_url }}">EU Map of population Trend</button>
+	{% endif %}
 </div>
