[views] add config view for admin

--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -8,4 +8,9 @@
   <li><a href="{{ url_for('.progress') }}">Summary of EU Assessments</a></li>
   <li><a href="{{ url_for('.report') }}">MS Data</a></li>
 </ul>
+
+<ul>
+  <h2>Administrator</h2>
+  <li><a href="{{ url_for('common.config') }}">Settings</a></li>
+</ul>
 {% endblock content %}
