[auth] Import and adapt auth from art17.

--- a/art12/templates/layout.html
+++ b/art12/templates/layout.html
@@ -21,3 +21,15 @@
       ('Article 12', None),
     ]) }}
 {% endblock %}
+
+{% block before_content %}
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      <ul class=flashes>
+        {% for category, message in messages %}
+          <li class="flashmessage flashmessage-{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+{% endblock %}
