--- a/eea_integration/layout/templates/layout_default.html
+++ b/eea_integration/layout/templates/layout_default.html
@@ -16,6 +16,7 @@
 
 <div id="container">
   <div id="workarea">
+    {% block before_content %}{% endblock %}
     {% block content %}{% endblock content %}
   </div>
 </div>
