--- a/eea_integration/layout/templates/layout_zope.html
+++ b/eea_integration/layout/templates/layout_zope.html
@@ -17,6 +17,7 @@
 {{ g.zope_layout.breadcrumbs_to_leftcolumn }}
 {{ g.zope_layout.leftcolumn_to_content }}
 
+{% block before_content %}{% endblock %}
 {% block content %}{% endblock %}
 {% block scripts %}{% endblock %}
 
