Replace country_isocode by country.

--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -37,7 +37,7 @@
 				{% for row in objects %}
 					<tr class="stripe_row">
 						<td class="default-td">
-							{{ row.country_isocode }}
+							{{ row.country }}
 						</td>
 
 						{% include 'summary/content/population_bs.html' with context %}
