--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -1,52 +1,57 @@
 {% extends 'layout.html' %}
 
 {% block breadcrumbs %}
-	{% from 'common/_macros.html' import breadcrumbs %}
-	{{ breadcrumbs(APP_BREADCRUMBS + [
+  {% from 'common/_macros.html' import breadcrumbs %}
+  {{ breadcrumbs(APP_BREADCRUMBS + [
       ('Species report', None),
     ]) }}
 {% endblock %}
 
 
 {% block content %}
-	<div class="copy-disabled" tabindex="1">
-		<h1>Species assessments at Member State level</h1>
+  <div class="copy-disabled" tabindex="1">
+    <h1>Species assessments at Member State level</h1>
 
-		<p>
-			Choose a period and a species.
-		</p>
+    <p>
+      Choose a period and a species.
+    </p>
 
-		{% include 'reports/filters.html' %}
+    {% include 'reports/filters.html' %}
 
-		{% set colspan_all=30 %}
+    {% set colspan_all=30 %}
 
-		{% if current_selection %}
-			{% include 'common/legend.html' %}
-			<table class="complex_datatable">
-				<caption>
-					<b>Current selection</b>:
-					{{ current_selection|join(', ') }}.
-				</caption>
+    {% if current_selection %}
+      {% include 'common/legend.html' %}
+      <table class="complex_datatable">
+        <caption>
+          <b>Current selection</b>:
+          {{ current_selection|join(', ') }}.
+        </caption>
 
-				{% set is_reports = true %}
-				{% include "common/species_table_header.html" with context %}
+        {% set is_reports = true %}
+        {% include "common/species_table_header.html" with context %}
 
-				<tbody class="stripe_3rd">
-				{% for row in objects %}
-					<tr {% if row.is_assesm %}class="assesm"{% endif %}>
-						<td class="default-td">{{ row.speciesname }}</td>
+        <tbody class="stripe_3rd">
+        {% for row in objects %}
+          <tr {% if row.is_assesm %}class="assesm"{% endif %}>
+            <td class="border">
+              {% set original_url=generate_original_url(row) %}
+              <a class="clipped popup-btn block" data-title="Factsheet"
+                 href="{{ original_url }}" title="{{ title }}">
+                {{ row.speciesname }}
+              </a>
+            </td>
+            {% include 'summary/content/population_bs.html' with context %}
+            {% include 'summary/content/range.html' with context %}
+            {% include 'summary/content/population_ws.html' with context %}
+            {% include 'summary/content/gridded_maps.html' with context %}
 
-						{% include 'summary/content/population_bs.html' with context %}
-						{% include 'summary/content/range.html' with context %}
-						{% include 'summary/content/population_ws.html' with context %}
-						{% include 'summary/content/gridded_maps.html' with context %}
-
-					</tr>
-				{% endfor %}
-				</tbody>
-			</table>
-		{% else %}
-			<p><b>Please select a country.</b></p>
-		{% endif %}
-	</div>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    {% else %}
+      <p><b>Please select a country.</b></p>
+    {% endif %}
+  </div>
 {% endblock %}
