[buttons] Show disabled map buttons.

--- a/art12/templates/summary/buttons.html
+++ b/art12/templates/summary/buttons.html
@@ -12,9 +12,13 @@
 
 	{% if map_url %}
 		<button type="button" id="show-map" data-url="{{ map_url }}">Map</button>
+  {% else %}
+    <button type="button" class="disabled">Map</button>
 	{% endif %}
 
 	{% if eu_map_url %}
 		<button type="button" id="show-eu-map" data-url="{{ eu_map_url }}">EU Map of population Trend</button>
+  {% else %}
+    <button type="button" class="disabled">EU Map of population Trend</button>
 	{% endif %}
 </div>
