--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -1,16 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Welcome to Article 12</h1>
+  <h1>Welcome to Article 12</h1>
 
-<ul>
-  <li><a href="{{ url_for('.summary') }}">EU Assessments</a></li>
-  <li><a href="{{ url_for('.progress') }}">Summary of EU Assessments</a></li>
-  <li><a href="{{ url_for('.report') }}">MS Data</a></li>
-</ul>
+  <ul>
+    <li><a href="{{ url_for('.summary') }}">EU Assessments</a></li>
+    <li><a href="{{ url_for('.progress') }}">Summary of EU Assessments</a></li>
+    <li><a href="{{ url_for('.report') }}">MS Data</a></li>
+  </ul>
 
-<ul>
-  <h2>Administrator</h2>
-  <li><a href="{{ url_for('common.config') }}">Settings</a></li>
-</ul>
+  {% if admin_perm.can() %}
+    <h2>Administrator</h2>
+    <ul>
+      <li><a href="{{ url_for('common.config') }}">Settings</a></li>
+    </ul>
+  {% endif %}
 {% endblock content %}
