--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -10,7 +10,7 @@
 
 {% block content %}
   <div class="copy-disabled" tabindex="1">
-    <h1>Species assessments at EU biogeographical level</h1>
+    <h1>Species assessments at EU level</h1>
 
     <p>
       Choose a period and a species.
