--- a/art12/static/css/art12.css
+++ b/art12/static/css/art12.css
@@ -11,35 +11,35 @@ body #workarea {
 .trend-inc.conclusion {
   color: #000;
   border-color: #639500;
-  background-color: #76923c;
+  background-color: #92b54b;
 }
 
 .trend-dec .conclusion,
 .trend-dec.conclusion {
   color: #000;
   border-color: #742c2c;
-  background-color: #cc0000;
+  background-color: #e02020;
 }
 
 .trend-xx .conclusion,
 .trend-xx.conclusion {
   color: #000;
   border-color: #888;
-  background-color: #808080;
+  background-color: #b0b0b0;
 }
 
 .trend-eq .conclusion,
 .trend-eq.conclusion {
   color: #000;
   border-color: #4774c7;
-  background-color: #365f91;
+  background-color: #467aba;
 }
 
 .trend-f .conclusion,
 .trend-f.conclusion {
   color: #000;
   border-color: #7a005c;
-  background-color: #5f497a;
+  background-color: #7d60a0;
 }
 
 .copy-disabled {
