--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -6,7 +6,7 @@
 		{% if row.population_additional_info_record_bs == 'Y' %}
 		  title="{{ row.population_additional_info_bs|wordwrap }}"
 	  {% endif %}>
-	{{ row.population_additional_info_record_bs }}
+	{{ row.population_additional_info_record_bs or '' }}
 </td>
 <td class="center">
 	{{ row.percentage_population_mean_size_bs|float or 'N/A' }}
@@ -26,7 +26,7 @@
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_long_bs) }}"
 		title="{{ row.population_trend_long_quality_bs }}">
 	<span class="conclusion">
-		{{ population_trend_long(row.bs) }}
+		{{ population_trend_long(row.bs) or '' }}
   </span>
 </td>
 <td class="default-td"
