--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -8,7 +8,7 @@
 		{% if row.range_additional_info_record_bs == 'Y' %}
       title="{{ row.range_additional_info_bs|wordwrap }}"
 		{% endif %}>
-	{{ row.range_additional_info_record_bs }}
+	{{ row.range_additional_info_record_bs or '' }}
 </td>
 <td class="center">
 	{{ row.percentage_range_surface_area_bs|float or 'N/A' }}
@@ -35,5 +35,5 @@
 		{% if row.range_trend_additional_info_record_bs == 'Y' %}
 		  title="{{ row.range_trend_additional_info_bs|wordwrap }}"
 	  {% endif %}>
-	{{ row.range_trend_additional_info_record_bs }}
+	{{ row.range_trend_additional_info_record_bs or '' }}
 </td>
