--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,12 +1,12 @@
 <td class="default-td border_left">
-	{{ row.distribution_grid_area|float }}
+	{{ row.distribution_grid_area|float or '' }}
 </td>
 <td class="center">
-	{{ row.percentage_distribution_grid_area|float }}
+	{{ row.percentage_distribution_grid_area|float or '' }}
 </td>
 <td class="default-td">
-	{{ row.range_grid_area|float }}
+	{{ row.range_grid_area|float or '' }}
 </td>
 <td class="center">
-	{{ row.percentage_range_grid_area|float }}
+	{{ row.percentage_range_grid_area|float or '' }}
 </td>
