--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -1,6 +1,6 @@
 <td class="default-td border_left"
 		title="{{ row.population_quality_bs }}">
-	{{ population_size_unit(row.bs) }}
+	{{ population_size_unit(row.bs) or '' }}
 </td>
 <td class="default-td"
 		{% if row.population_additional_info_record_bs == 'Y' %}
@@ -9,13 +9,13 @@
 	{{ row.population_additional_info_record_bs or '' }}
 </td>
 <td class="center">
-	{{ row.percentage_population_mean_size_bs|float or 'N/A' }}
+	{{ row.percentage_population_mean_size_bs|float or '' }}
 </td>
 <td class="default-td">
 	{{ row.population_trend_period_bs or '' }}
 </td>
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_bs) }}"
-		title="{{ row.population_trend_quality_bs }}">
+		title="{{ row.population_trend_quality_bs or '' }}">
   <span class="conclusion">
 		{{ population_trend(row.bs) }}
 	</span>
@@ -24,7 +24,7 @@
 	{{ row.population_trend_long_period_bs or '' }}
 </td>
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_long_bs) }}"
-		title="{{ row.population_trend_long_quality_bs }}">
+		title="{{ row.population_trend_long_quality_bs or '' }}">
 	<span class="conclusion">
 		{{ population_trend_long(row.bs) or '' }}
   </span>
@@ -33,5 +33,5 @@
 		{% if row.population_trend_additional_info_record_bs == 'Y' %}
 		  title="{{ row.population_trend_additional_info_bs|wordwrap }}"
     {% endif %}>
-	{{ row.population_trend_additional_info_record_bs }}
+	{{ row.population_trend_additional_info_record_bs or '' }}
 </td>
