--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,37 +1,37 @@
 <td class="default-td border_left"
 		title="{{ row.population_quality_ws }}">
-	{{ population_size_unit(row.ws) }}
+	{{ population_size_unit(row.ws) or '' }}
 </td>
 <td class="default-td"
 		{% if row.population_additional_info_record_ws =='Y' %}
-		  title="{{ row.population_additional_info_ws }}"
+		  title="{{ row.population_additional_info_ws|wordwrap }}"
     {% endif %}>
 	{{ row.population_additional_info_record_ws or '' }}
 </td>
 <td class="center">
-	{{ row.percentage_population_mean_size_ws|float or ''}}
+	{{ row.percentage_population_mean_size_ws|float or '' }}
 </td>
 <td class="default-td">
 	{{ row.population_trend_period_ws or '' }}
 </td>
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_ws) }}"
-		title="{{ row.population_trend_quality_ws }}">
+		title="{{ row.population_trend_quality_ws or '' }}">
   <span class="conclusion">
 		{{ population_trend(row.ws) }}
 	</span>
 </td>
 <td class="default-td">
-	{{ row.population_trend_long_period_ws or ''}}
+	{{ row.population_trend_long_period_ws or '' }}
 </td>
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_long_ws) }}"
-		title="{{ row.population_trend_long_quality_ws }}">
+		title="{{ row.population_trend_long_quality_ws or '' }}">
   <span class="conclusion">
   	{{ population_trend_long(row.ws) or '' }}
   </span>
 </td>
 <td class="default-td"
 		{% if row.population_trend_additional_info_record_ws == 'Y' %}
-      class="{{ row.population_trend_additional_info_ws }}"
+      class="{{ row.population_trend_additional_info_ws|wordwrap }}"
     {% endif %}>
 	{{ row.population_trend_additional_info_record_ws or '' }}
 </td>
