improve code and fix more template displaying

--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -1,5 +1,5 @@
 <td class="default-td border_left"
-		title="{{ row.range_quality_bs }}">
+		title="{{ row.range_quality_bs or '' }}">
 	<span class="conclusion">
     {{ row.range_surface_area_bs|int or '' }}
 	</span>
