--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -1,5 +1,5 @@
 <td class="default-td border_left"
-		title="{{ row.population_quality_bs }}">
+		title="{{ row.population_quality_bs or '' }}">
 	{{ population_size_unit(row.bs) or '' }}
 </td>
 <td class="default-td"
@@ -17,7 +17,7 @@
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_bs) }}"
 		title="{{ row.population_trend_quality_bs or '' }}">
   <span class="conclusion">
-		{{ population_trend(row.bs) }}
+		{{ population_trend(row.bs) or '' }}
 	</span>
 </td>
 <td class="default-td">
