--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,5 +1,5 @@
 <td class="default-td border_left"
-		title="{{ row.population_quality_ws }}">
+		title="{{ row.population_quality_ws or '' }}">
 	{{ population_size_unit(row.ws) or '' }}
 </td>
 <td class="default-td"
@@ -17,7 +17,7 @@
 <td class="trend-{{ TREND_CLASSES.get(row.population_trend_ws) }}"
 		title="{{ row.population_trend_quality_ws or '' }}">
   <span class="conclusion">
-		{{ population_trend(row.ws) }}
+		{{ population_trend(row.ws) or '' }}
 	</span>
 </td>
 <td class="default-td">
