--- a/art12/templates/progress/species.html
+++ b/art12/templates/progress/species.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 	<div class="copy-disabled" tabindex="1">
-		<h1>Species assessments at EU level</h1>
+		<h1>EU population status assessments</h1>
 
 		<p>
 			Choose a period and a conclusion type.
