--- a/art12/templates/common/species_table_eu_header.html
+++ b/art12/templates/common/species_table_eu_header.html
@@ -3,7 +3,7 @@
 <tr class="section-header">
   <th class="table-title" colspan="{{ colspan_all }}">
     <div class="table-separator"></div>
-    EU Biogeographical assessment
+    EU population status assessments
   </th>
 </tr>
 
