[templates] remove tooltip for agreed and other units

--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,7 +1,6 @@
 {% from 'common/_macros.html' import additional_info %}
 
-<td class="default-td border_left"
-		title="{{ row.population_quality_ws or '' }}">
+<td class="default-td border_left">
 	{{ population_size_unit(row.ws) or '' }}
 </td>
 
