--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -1,7 +1,6 @@
 {% from 'common/_macros.html' import additional_info %}
 
-<td class="default-td border_left"
-		title="{{ row.range_quality_bs or '' }}">
+<td class="default-td border_left">
 	<span class="conclusion">
     {{ row.range_surface_area_bs|int or '' }}
 	</span>
