[templates] bold first subcolumn of each species` main column

--- a/art12/templates/summary/content/population_ws.html
+++ b/art12/templates/summary/content/population_ws.html
@@ -1,7 +1,7 @@
 {% from 'common/_macros.html' import additional_info %}
 
 <td class="default-td border_left">
-	{{ population_size_unit(row.ws) or '' }}
+	<div class="first-subcolumn">{{ population_size_unit(row.ws) or '' }}</div>
 </td>
 
 {{ additional_info(row.population_additional_info_record_ws, row.population_additional_info_ws) }}
