--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -2,7 +2,7 @@
 
 <td class="default-td border_left">
 	<span class="conclusion">
-    {{ row.range_surface_area_bs|int or '' }}
+    <div class="first-subcolumn">{{ row.range_surface_area_bs|int or '' }}</div>
 	</span>
 </td>
 
