--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -1,7 +1,7 @@
 {% from 'common/_macros.html' import additional_info %}
 
 <td class="default-td border_left">
-	{{ population_size_unit(row.bs) or '' }}
+	<div class="first-subcolumn">{{ population_size_unit(row.bs) or '' }}</div>
 </td>
 
 {{ additional_info(row.population_additional_info_record_bs, row.population_additional_info_bs) }}
